--- a/cliente_web_instagram_clone/app/views/index/padrao.ejs
+++ b/cliente_web_instagram_clone/app/views/index/padrao.ejs
@@ -14,6 +14,24 @@
 		<!-- incluindo css -->
 		<link href="css/style.css" rel="stylesheet">
 
+		<script>
+			$('#entrar').click(function(){
+								var id_comentario = this.value;
+
+								var xhr = new XMLHttpRequest();
+								xhr.open('GET', 'http://localhost:8080/api/get'+id_comentario);
+								
+								xhr.onload = function(){
+									if(xhr.status === 200){
+										window.location.href = '/home';
+									}
+								}
+
+								xhr.send();
+
+							});
+		</script>
+
 	</head>
 
 	<body>
@@ -45,7 +63,7 @@
 										</div>
 
 										<div class="form-group">
-											<button class="btn btn-primary btn-login">Entrar</button>
+											<button class="btn btn-primary btn-login" id="entrar" name="entrar">Entrar</button>
 										</div>
 
 										<div class="form-group">
@@ -59,7 +77,7 @@
 											<div class="row">
 												<div class="col-lg-12">
 													<div class="text-center">
-														<a href="/home">Entrar com o Facebook</a>
+														<a href="/cadastro">Cadastre-se</a>
 													</div>
 												</div>
 											</div>
