--- a/cliente_web_instagram_clone/app/views/home/padrao.ejs
+++ b/cliente_web_instagram_clone/app/views/home/padrao.ejs
@@ -99,10 +99,11 @@
 								xhr.setRequestHeader('Content-Type', 'application/json');
 
 								xhr.onload = function(){
-									if(xhr.status === 200){
-										window.location.href = '/home';
+									console.log(xhr.status);
+									if(xhr.status === 200 || xhr.status !== 500){
+										 window.location.href = '/home';
 									}
-									window.location.href = '/home';
+									
 								}
 
 								xhr.send(JSON.stringify({comentario : comentario}));
@@ -145,7 +146,11 @@
 					xhr.onreadystatechange = function(){
 						if(xhr.readyState == 4){
 							var resposta = xhr.responseText;
-							document.getElementById('mensagem').innerHTML = resposta;
+							document.getElementById('mensagem').innerHTML = resposta;	
+						}
+						
+						if(xhr.status === 200 || xhr.status !== 500) {
+							window.location.href = '/home';
 						}
 					}
 
