--- a/cliente_web_instagram_clone/app/views/home/padrao.ejs
+++ b/cliente_web_instagram_clone/app/views/home/padrao.ejs
@@ -170,7 +170,9 @@
 			<div class="container">
 				<div class="col-md-12">
 					<div class="container-fluid">
-						<img alt="Instagram Clone - Versão WEB" src="images/logo2.jpg" class="logo2">
+							<a href="/home">
+								<img alt="Instagram Clone - Versão WEB" src="images/logo2.jpg" class="logo2">
+							</a>
 						<img alt="Incluir" src="images/incluir.jpg" class="pull-right btn-incluir" id="btn_incluir">						
 					</div>
 				</div>
